Inicio da tarefa 2 - Permitir que o usuário escolha um nome a ser exibido no chat

--- a/app/src/main/res/menu/menu_modo_aplicativo.xml
+++ b/app/src/main/res/menu/menu_modo_aplicativo.xml
@@ -27,7 +27,12 @@
         android:title="Modo"
         app:showAsAction="always"
         android:visible="true"
-
+    />
+    <item
+            android:id="@+id/menuNomeExibe"
+            android:title="Nome de exibição"
+            app:showAsAction="collapseActionView"
+            android:visible="true"
     />
 
 </menu>
