--- a/app/src/main/res/layout/dialog_name.xml
+++ b/app/src/main/res/layout/dialog_name.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-												   android:layout_width="match_parent"
-												   android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+    >
 
 
 	<LinearLayout android:layout_width="match_parent"
@@ -17,21 +19,29 @@
 				  android:textAlignment="center"
 		/>
 
-		<com.google.android.material.textfield.TextInputLayout
-				android:id="@+id/til_nome_user"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
+		<EditText android:layout_width="match_parent"
+				  android:layout_height="wrap_content"
+				  android:id="@+id/tied_nome_user"
+				  android:hint="Nome/Apelido"
+				  android:textSize="15sp"
+				  android:singleLine="true"
+		/>
 
-			<com.google.android.material.textfield.TextInputEditText
-					android:id="@+id/tied_nome_user"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:hint="Nome/Apelido"
-					android:textSize="15sp"
-			/>
+		<!--<com.google.android.material.textfield.TextInputLayout-->
+				<!--android:id="@+id/til_nome_user"-->
+				<!--android:layout_width="match_parent"-->
+				<!--android:layout_height="wrap_content">-->
 
-		</com.google.android.material.textfield.TextInputLayout>
+			<!--<com.google.android.material.textfield.TextInputEditText-->
+					<!--android:id="@+id/tied_nome_user"-->
+					<!--android:layout_width="match_parent"-->
+					<!--android:layout_height="wrap_content"-->
+					<!--android:hint="Nome/Apelido"-->
+					<!--android:textSize="15sp"-->
+			<!--/>-->
+
+		<!--</com.google.android.material.textfield.TextInputLayout>-->
 
 	</LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
