Alteracoes no layout do Menu e enviado do nome de exibição para o outro dispositivo

--- a/app/src/main/res/menu/menu_modo_aplicativo.xml
+++ b/app/src/main/res/menu/menu_modo_aplicativo.xml
@@ -24,8 +24,8 @@
     <!--Refresh -->
     <item
         android:id="@+id/menuModo"
-        android:title="Modo"
-        app:showAsAction="always"
+        android:title="Modo Chat"
+        app:showAsAction="collapseActionView"
         android:visible="true"
     />
     <item
